--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
+    "knex": "^3.1.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
