--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "knex": "^3.1.0",
     "pg": "^8.11.3"
