--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node-cron": "^3.0.11",
     "concurrently": "^8.2.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
     "typescript": "^5.3.3"
   }
