--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "knex": "^3.1.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node-cron": "^3.0.11",
     "concurrently": "^8.2.2",
