--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "firebase": "^10.10.0",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
+    "firebase": "^10.10.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
