--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "firebase": "^10.10.0",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -24,6 +25,7 @@
     "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
