--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
@@ -22,6 +23,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
