--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "knex": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node-cron": "^3.0.11",
     "concurrently": "^8.2.2",
     "node-cron": "^3.0.3",
